# shardz

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml  search.html
.github/workflows/: build.yaml
concept/: index.html
docs/: concept.md  index.md
search/: search_index.json
