[tool.poetry]
name = "shardz"
version = "0.1.0"
description = "Shardz managment system"
authors = ["Yann Piquet <yann@piquet.tech>"]

[tool.poetry.dependencies]
python = "^3.9"
mkdocs = "^1.3.1"
mkdocs-rtd-dropdown = "^1.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
